JavaCC/JavaCC/source/uniandes/lym/robot/control/Robot.java
/* Generated By:JavaCC: Do not edit this line. Robot.java */
package uniandes.lym.robot.control;

import uniandes.lym.robot.kernel.*;
import uniandes.lym.robot.view.Console;

import java.awt.Point;
import java.io.*;
import java.util.Vector;
import java.util.LinkedList;
import java.util.HashMap;

@SuppressWarnings("serial")
public class Robot implements RobotConstants {


        private RobotWorldDec world;
        private HashMap<String, Integer> variables = new HashMap<String, Integer>(); // Diccionario de variables

        void setWorld(RobotWorld w) {
                world = (RobotWorldDec) w;
        }


        String salida=new String();

        int obtenerValorVariable(String nombreVariable){
        if (variables.containsKey(nombreVariable)) {
                return variables.get(nombreVariable);
        }
        return 0;
        }

//boolean command(uniandes.lym.robot.view.Console sistema) :
  final public boolean command(Console sistema) throws ParseException {
        int x,y;
        salida=new String();
    if (jj_2_13(2)) {
      if (jj_2_10(2)) {
        if (jj_2_1(2)) {
          jj_consume_token(RIGHT);
          jj_consume_token(59);
          jj_consume_token(60);
                            world.turnRight();salida = "Command: Turnright";
        } else if (jj_2_2(2)) {
          jj_consume_token(MOVE);
          jj_consume_token(59);
          x = valor();
          jj_consume_token(60);
                                           world.moveForward(x,false);salida = "Command: Moveforward ";
        } else if (jj_2_3(2)) {
          jj_consume_token(HOP);
          jj_consume_token(59);
          x = num();
          jj_consume_token(60);
                                        world.moveForward(x,true);salida = "Command:Jumpforward ";
        } else if (jj_2_4(2)) {
          jj_consume_token(GO);
          jj_consume_token(59);
          x = num();
          jj_consume_token(61);
          y = num();
          jj_consume_token(60);
                                                  world.setPostion(x,y);salida = "Command:GO ";
        } else if (jj_2_5(2)) {
          jj_consume_token(PUT);
          jj_consume_token(59);
          put();
          jj_consume_token(60);
        } else if (jj_2_6(2)) {
          jj_consume_token(PICK);
          jj_consume_token(59);
          get();
          jj_consume_token(60);
        } else if (jj_2_7(2)) {
          jj_consume_token(POP);
          jj_consume_token(59);
          x = num();
          jj_consume_token(60);
                                    world.popBalloons(x); salida = "Comando:  Pop";
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
        jj_consume_token(62);
      } else if (jj_2_11(2)) {
        jj_consume_token(EXEC);
        bloque();
                              salida = "Comando:  EXEC Exitoso";
      } else if (jj_2_12(2)) {
        jj_consume_token(NEW);
        if (jj_2_8(2)) {
          macro();
        } else if (jj_2_9(2)) {
          var();
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
                                     salida = "Comando:  NEW Exitoso";
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
            try {
                         Thread.sleep(900);
            } catch (InterruptedException e) {
                                System.err.format("IOException: %s%n", e);
                    }

                sistema.printOutput(salida);
                {if (true) return true;}
    } else if (jj_2_14(2)) {
      jj_consume_token(0);
             {if (true) return false;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public void put() throws ParseException {
                int f=1;
    if (jj_2_15(2)) {
      jj_consume_token(CHIPS);
      jj_consume_token(61);
      f = num();
                                          world.putChips(f); salida = "Command:  Put Chips";
    } else if (jj_2_16(2)) {
      jj_consume_token(BALLOONS);
      jj_consume_token(61);
      f = num();
                                                      world.putBalloons(f); salida = "Command:  Put Balloons";
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void get() throws ParseException {
                int f=1;
    if (jj_2_17(2)) {
      jj_consume_token(CHIPS);
      jj_consume_token(61);
      f = num();
                                         world.pickChips(f);salida = "Command:  Pick chips";
    } else if (jj_2_18(2)) {
      jj_consume_token(BALLOONS);
      jj_consume_token(61);
      f = num();
                                                      world.grabBalloons(f);salida="Command:  Pick balloons";
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void bloque() throws ParseException {
    jj_consume_token(OPEN_BRACE);
    inst();
    jj_consume_token(CLOSE_BRACE);
  }

  final public void inst() throws ParseException {
    instruccion();
    jj_consume_token(62);
    label_1:
    while (true) {
      if (jj_2_19(2)) {
        ;
      } else {
        break label_1;
      }
      instruccion();
      jj_consume_token(62);
    }
  }

  final public void macro() throws ParseException {
    jj_consume_token(MACRO);
    jj_consume_token(NOMBRE);
    jj_consume_token(59);
    param();
    jj_consume_token(60);
    bloque();
  }

  final public void param() throws ParseException {
    if (jj_2_21(2)) {
      jj_consume_token(NOMBRE);
      label_2:
      while (true) {
        if (jj_2_20(2)) {
          ;
        } else {
          break label_2;
        }
        jj_consume_token(61);
        jj_consume_token(NOMBRE);
      }
    } else {
      ;
    }
  }

  final public void var() throws ParseException {
    jj_consume_token(VAR);
    jj_consume_token(NOMBRE);
                     String nombreVar = token.image;
    jj_consume_token(EQUAL);
    jj_consume_token(NUM);
        variables.put(nombreVar, Integer.parseInt(token.image));
  }

  final public void instruccion() throws ParseException {
                int x,y;
                salida=new String();
    if (jj_2_37(2)) {
      if (jj_2_22(2)) {
        jj_consume_token(NOMBRE);
        jj_consume_token(EQUAL);
        valor();
      } else if (jj_2_23(2)) {
        jj_consume_token(NOMBRE);
        jj_consume_token(59);
        listaParametros();
        jj_consume_token(60);
      } else if (jj_2_24(2)) {
        jj_consume_token(TURNTOMY);
        jj_consume_token(59);
        dir();
        jj_consume_token(60);
      } else if (jj_2_25(2)) {
        jj_consume_token(TURNTOTHE);
        jj_consume_token(59);
        orient();
        jj_consume_token(60);
      } else if (jj_2_26(2)) {
        jj_consume_token(WALK);
        jj_consume_token(59);
        valor();
        jj_consume_token(60);
      } else if (jj_2_27(2)) {
        jj_consume_token(JUMP);
        jj_consume_token(59);
        valor();
        jj_consume_token(60);
      } else if (jj_2_28(2)) {
        jj_consume_token(DROP);
        jj_consume_token(59);
        valor();
        jj_consume_token(60);
      } else if (jj_2_29(2)) {
        jj_consume_token(PICK);
        jj_consume_token(59);
        valor();
        jj_consume_token(60);
      } else if (jj_2_30(2)) {
        jj_consume_token(GRAB);
        jj_consume_token(59);
        valor();
        jj_consume_token(60);
      } else if (jj_2_31(2)) {
        jj_consume_token(LETGO);
        jj_consume_token(59);
        valor();
        jj_consume_token(60);
      } else if (jj_2_32(2)) {
        jj_consume_token(POP);
        jj_consume_token(59);
        valor();
        jj_consume_token(60);
      } else if (jj_2_33(2)) {
        jj_consume_token(MOVES);
        jj_consume_token(59);
        listaDir();
        jj_consume_token(60);
      } else if (jj_2_34(2)) {
        jj_consume_token(NOP);
      } else if (jj_2_35(2)) {
        jj_consume_token(SAFEEXE);
        jj_consume_token(59);
        instruccion();
        jj_consume_token(60);
      } else if (jj_2_36(2)) {
        control();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else if (jj_2_38(2)) {
      jj_consume_token(RIGHT);
      jj_consume_token(59);
      jj_consume_token(60);
                                   world.turnRight();salida = "Command: Turnright";
    } else if (jj_2_39(2)) {
      jj_consume_token(MOVE);
      jj_consume_token(59);
      x = num();
      jj_consume_token(60);
                                                 world.moveForward(x,false);salida = "Command: Moveforward ";
    } else if (jj_2_40(2)) {
      jj_consume_token(HOP);
      jj_consume_token(59);
      x = num();
      jj_consume_token(60);
                                                world.moveForward(x,true);salida = "Command:Jumpforward ";
    } else if (jj_2_41(2)) {
      jj_consume_token(GO);
      jj_consume_token(59);
      x = num();
      jj_consume_token(61);
      y = num();
      jj_consume_token(60);
                                                          world.setPostion(x,y);salida = "Command:GO ";
    } else if (jj_2_42(2)) {
      jj_consume_token(PUT);
      jj_consume_token(59);
      put();
      jj_consume_token(60);
    } else if (jj_2_43(2)) {
      jj_consume_token(PICK);
      jj_consume_token(59);
      get();
      jj_consume_token(60);
    } else if (jj_2_44(2)) {
      jj_consume_token(POP);
      jj_consume_token(59);
      x = num();
      jj_consume_token(60);
                                        world.popBalloons(x); salida = "Comando:  Pop";
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void control() throws ParseException {
    if (jj_2_45(2)) {
      jj_consume_token(IF);
      jj_consume_token(59);
      condicion();
      jj_consume_token(60);
      jj_consume_token(THEN);
      bloque();
      jj_consume_token(ELSE);
      bloque();
      jj_consume_token(FI);
    } else if (jj_2_46(2)) {
      jj_consume_token(WHILE);
      jj_consume_token(59);
      condicion();
      jj_consume_token(60);
      jj_consume_token(DO);
      bloque();
      jj_consume_token(OD);
    } else if (jj_2_47(2)) {
      jj_consume_token(REP);
      valor();
      jj_consume_token(TIMES);
      bloque();
      jj_consume_token(PER);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void condicion() throws ParseException {
    if (jj_2_48(2)) {
      jj_consume_token(TRUE);
    } else if (jj_2_49(2)) {
      jj_consume_token(FALSE);
    } else if (jj_2_50(2)) {
      jj_consume_token(ISBLOCKED);
      jj_consume_token(59);
      direccion();
      jj_consume_token(60);
    } else if (jj_2_51(2)) {
      jj_consume_token(ISFACING);
      jj_consume_token(59);
      orientacion();
      jj_consume_token(60);
    } else if (jj_2_52(2)) {
      jj_consume_token(ZERO);
      jj_consume_token(59);
      valor();
      jj_consume_token(60);
    } else if (jj_2_53(2)) {
      jj_consume_token(NOT);
      jj_consume_token(59);
      condicion();
      jj_consume_token(60);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void direccion() throws ParseException {
    if (jj_2_54(2)) {
      jj_consume_token(LEFT);
    } else if (jj_2_55(2)) {
      jj_consume_token(RIGHT);
    } else if (jj_2_56(2)) {
      jj_consume_token(FRONT);
    } else if (jj_2_57(2)) {
      jj_consume_token(BACK);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void dir() throws ParseException {
    if (jj_2_58(2)) {
      jj_consume_token(LEFT);
    } else if (jj_2_59(2)) {
      jj_consume_token(RIGHT);
    } else if (jj_2_60(2)) {
      jj_consume_token(BACK);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void orientacion() throws ParseException {
    if (jj_2_61(2)) {
      jj_consume_token(NORTH);
    } else if (jj_2_62(2)) {
      jj_consume_token(SOUTH);
    } else if (jj_2_63(2)) {
      jj_consume_token(EAST);
    } else if (jj_2_64(2)) {
      jj_consume_token(WEST);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void orient() throws ParseException {
    if (jj_2_65(2)) {
      jj_consume_token(NORTH);
    } else if (jj_2_66(2)) {
      jj_consume_token(SOUTH);
    } else if (jj_2_67(2)) {
      jj_consume_token(EAST);
    } else if (jj_2_68(2)) {
      jj_consume_token(WEST);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public int valor() throws ParseException {
        int val = 0;
    if (jj_2_69(2)) {
      jj_consume_token(NUM);
                  val = Integer.parseInt(token.image);
    } else if (jj_2_70(2)) {
      jj_consume_token(NOMBRE);
                     val = obtenerValorVariable(token.image);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
      {if (true) return val;}
    throw new Error("Missing return statement in function");
  }

  final public void listaParametros() throws ParseException {
    if (jj_2_72(2)) {
      valor();
      label_3:
      while (true) {
        if (jj_2_71(2)) {
          ;
        } else {
          break label_3;
        }
        jj_consume_token(61);
        valor();
      }
    } else {
      ;
    }
  }

  final public void listaDir() throws ParseException {
    dirMoves();
    label_4:
    while (true) {
      if (jj_2_73(2)) {
        ;
      } else {
        break label_4;
      }
      jj_consume_token(61);
      dirMoves();
    }
  }

  final public void dirMoves() throws ParseException {
    if (jj_2_74(2)) {
      jj_consume_token(FORWARD);
    } else if (jj_2_75(2)) {
      jj_consume_token(RIGHT);
    } else if (jj_2_76(2)) {
      jj_consume_token(LEFT);
    } else if (jj_2_77(2)) {
      jj_consume_token(BACKWARDS);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

        /**
	 * Unsigned decimal number
	 * @return the corresponding value of the string
	 * @error  corresponding value is too large
	 */
  final public int num() throws ParseException, Error {
                int total=1;
    jj_consume_token(NUM);
                        try
                        {
                                total = Integer.parseInt(token.image);
                        }
                        catch (NumberFormatException ee)
                        {
                                {if (true) throw new Error("Number out of bounds: "+token.image+" !!");}
                        }
                        {if (true) return total;}
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  private boolean jj_2_33(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  private boolean jj_2_34(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  private boolean jj_2_35(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_35(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  private boolean jj_2_36(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_36(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  private boolean jj_2_37(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_37(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  private boolean jj_2_38(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_38(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(37, xla); }
  }

  private boolean jj_2_39(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_39(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(38, xla); }
  }

  private boolean jj_2_40(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_40(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(39, xla); }
  }

  private boolean jj_2_41(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_41(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(40, xla); }
  }
